Fixed the issue with local instance environment settings not being passed over to the process or subprocess causing execution at those levels to fail! Added test for them meterian client runner